--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
         image: mysql:8.0.25
         container_name: mysql
         hostname: mysql-server
+        command: --default-authentication-plugin=mysql_native_password
         ports:
             - 3306:3306
         volumes:
             - datavolume:/var/lib/mysql
-            - migrationvolume:/usr/src/app/migrations/*
         environment:
             MYSQL_ROOT_PASSWORD: P@ssw0rd
             MYSQL_DATABASE: singlepage_storage
@@ -23,6 +23,6 @@ services:
         restart: always
         depends_on:
             -   database
+
 volumes:
     datavolume:
-    migrationvolume:
