--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,26 +3,32 @@ services:
     database:
         image: mysql:8.0.25
         container_name: mysql
-        hostname: mysql-server
+        hostname: mysql
         command: --default-authentication-plugin=mysql_native_password
+        networks:
+            - singlepage-network
         ports:
-            - 3306:3306
+            - "3306:3306"
         volumes:
-            - datavolume:/var/lib/mysql
+            - ./data-volume:/var/lib/mysql
         environment:
             MYSQL_ROOT_PASSWORD: P@ssw0rd
             MYSQL_DATABASE: singlepage_storage
         restart: always
+
     backend:
         build: backend
         container_name: flask
+        hostname: flask
+        networks:
+            - singlepage-network
         ports:
-            - 5000:5000
+            - "5000:5000"
         volumes:
             - $PWD/config.yaml:/usr/src/app/config/config.yaml
         restart: always
         depends_on:
             -   database
-
-volumes:
-    datavolume:
+networks:
+  singlepage-network:
+    driver: bridge
