--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
     database:
-        image: mysql:8.0.25
+        build: database
         container_name: mysql
         hostname: mysql
         command: --default-authentication-plugin=mysql_native_password
@@ -11,10 +11,6 @@ services:
             - "3306:3306"
         volumes:
             - ./data-volume:/var/lib/mysql
-        environment:
-            MYSQL_ROOT_PASSWORD: P@ssw0rd
-            MYSQL_DATABASE: singlepage_storage
-        restart: always
 
     backend:
         build: backend
@@ -28,7 +24,7 @@ services:
             - $PWD/config.yaml:/usr/src/app/config/config.yaml
         restart: always
         depends_on:
-            -   database
+            - database
 networks:
   singlepage-network:
     driver: bridge
